media: fix wide/full aligned image margin

--- a/style/layout/_in-grid.scss
+++ b/style/layout/_in-grid.scss
@@ -16,7 +16,9 @@
 	}
 }
 
-.wp-block-svbk-hero {
+.wp-block-svbk-hero,
+.wp-block-image.alignwide,
+.wp-block-image.alignfull {
 
 	@media screen and (min-width: $size__page-max-width) {
 		margin-top: 0;
